--- a/views/admin/products.ejs
+++ b/views/admin/products.ejs
@@ -37,6 +37,12 @@
                         <span class="text">Dashboard</span>
                     </a>
                 </li>
+                <li class="menu-item ">
+                    <a class="menu-link" href="sales">
+                        <i class="icon materi.al-icons md-home"></i>
+                        <span class="text">Sales</span>
+                    </a>
+                </li>
                 <li class="menu-item has-submenu">
                     <a style="font-weight: bold;" class="menu-link" href="users_list">
                         <i class="icon material-icons md-shopping_bag"></i>
@@ -282,8 +288,6 @@
                         <% } %>
                     <% } %>
                 </ul>
-
-                   
                 </nav>
             </div>
         </section>
