--- a/views/admin/users.ejs
+++ b/views/admin/users.ejs
@@ -35,6 +35,12 @@
                             <span class="text">Dashboard</span>
                         </a>
                     </li>
+                    <li class="menu-item ">
+                        <a class="menu-link" href="sales">
+                            <i class="icon materi.al-icons md-home"></i>
+                            <span class="text">Sales</span>
+                        </a>
+                    </li>
                     <li class="menu-item has-submenu">
                         <a class="menu-link" href="users_list">
                             <i class="icon material-icons md-shopping_bag"></i>
