--- a/views/users/products.ejs
+++ b/views/users/products.ejs
@@ -57,7 +57,7 @@
                                   
                                 </li>
                                 <li>
-                                    <a href="category.html" class="sf-with-ul">Shop</a>
+                                    <a href="category.html" class=" sf-with-ul">Shop</a>
 
                                   
                                 </li>
@@ -108,65 +108,67 @@
                         </div><!-- End .compare-dropdown -->
 
                         <div class="dropdown cart-dropdown">
+                            <% if(cart && cart.product.length){ %>
                             <a href="#" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-display="static">
                                 <i class="icon-shopping-cart"></i>
-                                <span class="cart-count">2</span>
+                                <span class="cart-count"><%=cart.product.length %></span>
+                                
                             </a>
+                            <%}else{%>
+                                <a href="#" class="dropdown-toggle" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false" data-display="static">
+                                    <i class="icon-shopping-cart"></i>
+                                  
+                                    <span class="cart-txt"></span>
+                                </a>  
+                            <%}%>
+                           
 
                             <div class="dropdown-menu dropdown-menu-right">
+                                <% if(cart && cart.product.length){ %>
                                 <div class="dropdown-cart-products">
+                                  
+                                    <%cart.product.forEach((val)=>{ %>
                                     <div class="product">
+                                        
                                         <div class="product-cart-details">
                                             <h4 class="product-title">
-                                                <a href="product.html">Beige knitted elastic runner shoes</a>
+                                                <a href=""><%=val.productId.name%></a>
                                             </h4>
 
                                             <span class="cart-product-info">
-                                                <span class="cart-product-qty">1</span>
-                                                x $84.00
+                                                <span class="cart-product-qty"><%= val.quantity%></span>
+                                                x ₹<%= val.productId.price%>
                                             </span>
                                         </div><!-- End .product-cart-details -->
+                                   
 
                                         <figure class="product-image-container">
                                             <a href="product.html" class="product-image">
-                                                <img src="assets/images/products/cart/product-1.jpg" alt="product">
+                                                <img src="/multerImage/<%=val.productId.images[0]%>" alt="<%=val.productId.name%>">
                                             </a>
                                         </figure>
                                         <a href="#" class="btn-remove" title="Remove Product"><i class="icon-close"></i></a>
                                     </div><!-- End .product -->
-
-                                    <div class="product">
-                                        <div class="product-cart-details">
-                                            <h4 class="product-title">
-                                                <a href="product.html">Blue utility pinafore denim dress</a>
-                                            </h4>
-
-                                            <span class="cart-product-info">
-                                                <span class="cart-product-qty">1</span>
-                                                x $76.00
-                                            </span>
-                                        </div><!-- End .product-cart-details -->
-
-                                        <figure class="product-image-container">
-                                            <a href="product.html" class="product-image">
-                                                <img src="assets/images/products/cart/product-2.jpg" alt="product">
-                                            </a>
-                                        </figure>
-                                        <a href="#" class="btn-remove" title="Remove Product"><i class="icon-close"></i></a>
-                                    </div><!-- End .product -->
+                                    <%})%>
                                 </div><!-- End .cart-product -->
 
                                 <div class="dropdown-cart-total">
                                     <span>Total</span>
-
-                                    <span class="cart-total-price">$160.00</span>
+                                   
+                                    <span class="cart-total-price">₹<%=subtotal%></span>
+                            
                                 </div><!-- End .dropdown-cart-total -->
 
                                 <div class="dropdown-cart-action">
                                     <a href="/loadCart" class="btn btn-primary">View Cart</a>
                                     <a href="checkout.html" class="btn btn-outline-primary-2"><span>Checkout</span><i class="icon-long-arrow-right"></i></a>
                                 </div><!-- End .dropdown-cart-total -->
+                                <%}else{%>
+                                    <h6>No Items In the Cart</h6>
+                                    <a href="/loadCart" class="btn btn-primary">View Cart</a>
+                                    <%}%>
                             </div><!-- End .dropdown-menu -->
+                          
                         </div><!-- End .cart-dropdown -->
                     </div><!-- End .header-right -->
                 </div><!-- End .container -->
