--- a/views/admin/home.ejs
+++ b/views/admin/home.ejs
@@ -133,7 +133,12 @@
                                 <span class="icon icon-sm rounded-circle bg-primary-light"><i class="text-primary material-icons md-monetization_on"></i></span>
                                 <div class="text">
                                     <h6 class="mb-1 card-title">Revenue</h6>
+<%if(revenue){%>
                                     <span>₹<%=revenue[0].revenue%></span>
+<%}else{%>
+                                    <span>₹<%=0000%></span>
+
+<%}%>
                                     <span class="text-sm"> Shipping fees are not included </span>
                                 </div>
                             </article>
